--- a/views/shop/checkout.hbs
+++ b/views/shop/checkout.hbs
@@ -1,6 +1,9 @@
 <div class="row">
     <div class="col-md-8 order-md-1">
         <h4 class="mb-3">Billing address</h4>
+        <div class="alert alert-danger hidden" id="charge-error">
+
+        </div>
         <form class="needs-validation" novalidate>
             <div class="row">
                 <div class="col-md-6 mb-3">
